# analise_feedback_alumind

./: .env.example  README.md  config.py  pyproject.toml  run.py
data/: feedbacks.json
feedback_analyzer/: __init__.py
feedback_analyzer/dtos/: feature_dto.py  feedback_dto.py
feedback_analyzer/llm/: llm_config.py  llm_service.py  models.py
feedback_analyzer/models/: feature.py  feedback.py
feedback_analyzer/routes/: feature_route.py  feedback_route.py  home.py
feedback_analyzer/services/: feature_service.py  feedback_service.py
feedback_analyzer/static/: main.js
feedback_analyzer/templates/: index.html
